adding user endpoint
