# backend/swagger_server/controllers/default_controller.py
@@ -2,24 +2,14 @@ import connexion
 import six
 
 from swagger_server.models.receipt import Receipt  # noqa: E501
+from swagger_server.models.user import User  # noqa: E501
 from swagger_server import util
 
 
-def add_receipt():  # noqa: E501
+def add_receipt(searchString=None, skip=None, limit=None):  # noqa: E501
     """adds an inventory item
 
     Adds an receipt to the system # noqa: E501
-
-
-    :rtype: None
-    """
-    return 'do some magic!'
-
-
-def get_receipts(searchString=None, skip=None, limit=None):  # noqa: E501
-    """return lists of receipts
-
-    By passing in the appropriate options, you can search for available inventory in the system  # noqa: E501
 
     :param searchString: pass an optional search string for looking up inventory
     :type searchString: str
@@ -27,6 +17,30 @@ def get_receipts(searchString=None, skip=None, limit=None):  # noqa: E501
     :type skip: int
     :param limit: maximum number of records to return
     :type limit: int
+
+    :rtype: List[Receipt]
+    """
+    return 'do some magic!'
+
+
+def get_info(id):  # noqa: E501
+    """get info on one user
+
+    get info on one user # noqa: E501
+
+    :param id: the user&#39;s id
+    :type id: str
+
+    :rtype: List[User]
+    """
+    return 'do some magic!'
+
+
+def get_receipts():  # noqa: E501
+    """return lists of receipts
+
+    By passing in the appropriate options, you can search for available inventory in the system  # noqa: E501
+
 
     :rtype: List[Receipt]
     """
